# qsentry

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: base.yaml
configs/experiment/: full.yaml  smoke.yaml
configs/models/: autoencoder.yaml  lstm.yaml  qlstm.yaml  transformer.yaml
docs/: ARCHITECTURE.md  DATASHEET.md  PACKAGING.md  REPRODUCIBILITY.md
paper/: README_PAPER.md  main.tex  references.bib
paper/tables/: tab_calibration.tex  tab_channel_importance.tex  tab_closed_set_generated.tex  tab_cross_domain_generated.tex  tab_datasets.tex  tab_efficiency.tex  tab_open_set_generated.tex
scripts/: 00_generate_data.py  01_preprocess.py  02_train.py  03_evaluate.py  04_cross_domain.py  05_open_set.py  06_calibration.py  07_robustness.py  08_operating.py  09_interpret.py  10_channel_ablation.py  11_make_figures.py  12_make_tables.py  13_statistics.py  _common.py  run_all.sh  run_smoke.sh
src/qsentry/: __init__.py  config.py  datasets.py  evaluate.py  interpret.py  metrics.py  operating.py  physics.py  robustness.py  seeding.py  tables.py  train.py  viz.py
src/qsentry/models/: __init__.py  autoencoder.py  lstm.py  qlstm.py  transformer.py
tests/: test_datasets.py  test_metrics.py  test_models.py  test_physics.py
