[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "qsentry"
version = "1.0.0"
description = "A telemetry-driven intelligent security layer for resilient quantum communication networks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "QSentry authors"}]
keywords = ["quantum-key-distribution", "anomaly-detection", "quantum-machine-learning",
            "domain-shift", "calibration", "security-monitoring"]
dependencies = [
  "numpy>=2.0",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "torch>=2.2",
  "qiskit>=1.0",
  "qiskit-aer>=0.14",
  "qiskit-machine-learning>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
